  * remove unneeded rect.svg from ouranos/dm-kdm/
  * remove temporary -destructchaos naming in KdmGreeters
  * change nyx/ to mirror source dir structure of newer art packages
  * change eros/ to mirror source dir structure of newer art packages
  * remove kde4 incompatible nyx/theme-kde/ files
  * change gaia/ to mirror source dir structure of newer art packages
  * update kdm theme xml files, thanks rgb

  [ Stefan Lippers-Hollmann ]
  * Initial release.
  * add bootstrap.sh, to generate debian/control.
  * add postinst handling to bootstrap.sh.
  * fix postinst handling.
  * remove stray */debian/control.
  * add compat layer 7.
  * remove individual changelogs.
  * harmonize wallpapers.
  * move svg into view.
  * merge copyrights, thanks to RoEn.
  * add CC-by-SA 3.0 license text.
  * update debian/copyright, thanks to RoEn.
  * bump standards version to 3.9.1, no changes necessary.
  * switch to dpkg-source 3.0 (native) format.
  * update machine-readable debian/copyright to DEP: 5, rev=135
  * s/Virtual package/metapackage, which makes lintian a bit happier about
    empty packages.
  * drop copyrights for chaos, this package never shipped its artwork.
  * add Αιθήρ
  * add Μώμος
  * add Μόρος
  * add Ύπνος
  * disable no yet buildable release artwork themes.
  * sync phrasing with Κῆρες artwork.
  * switch to compat level 8.
  * add basic top level Makefile.
  * add dh7 based debian/rules.
  * add forgotten build-depends for new style artworks.
  * add *.install file creation to bootstrap.sh
  * generate toplevel Makefuile by bootstrap.sh.
  * vacuum SVG files.
  * use bzip2 to compress source and binaries.
  * clean up, before bootstrapping.
  * drop merged debian/ subdirectories for finished release themes.
  * drop no longer require postinst.
  * add missing *.links and hook it up to bootstrap.sh
  * drop Αιθήρ, it still uses an incompatible buildsystem.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 19 Aug 2010 18:53:56 +0200