@@ -1,0 +1,1 @@
+momos/wallpaper-edu/sidux-momos-edu/*		usr/share/wallpapers/sidux-momos/
