@@ -1,0 +1,1 @@
+moros/wallpaper-edu/sidux-moros-edu/*		usr/share/wallpapers/sidux-moros/
