@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/wallpaper-edu/sidux-@CODENAME_SAFE@-edu/*		usr/share/wallpapers/sidux-@CODENAME_SAFE@/
